# MB-FLIM

./: LICENSE  README.md  config.json
mbflim/: __init__.py  files_io.py  parameters.py  pyproject.toml  shared.py  utils.py  visualization.py
mbflim/flim/: __init__.py  flim_processing.py  flim_set_processing.py  flim_visualization.py
mbflim/image/: __init__.py  image_processing.py  image_set_processing.py
scripts/: S0_create_files_info.py
scripts/flim/MB-ABn-cond/: F0_segment_mask_bin.py  F1_fit.py
scripts/flim/MB-Gn-Ldh/: F0_segment_mask_bin.py  F1_fit.py
scripts/flim/MB-Gn-cond/: F0_segment_mask_bin.py  F1_fit.py
scripts/flim/MB-KCc/: F0_segment_mask_bin.py  F1_fit.py  F2_project_average.py
scripts/flim/MB-KCc-cond/: F0_segment_mask_bin.py  F1_fit.py  F2_project_average.py
scripts/flim/MB-STn/: F0_segment_mask_bin.py  F1_fit.py
scripts/flim/brain-KCc/: F0_segment_mask_bin.py  F1_fit.py  F2_split.py
scripts/mapping/: M0_preprocess.py  M1_generate_template.py  M2_generate_masks.py  M3_map_subtypes.py
